# fp-lab-1

./: .gitignore  README.md  dune-project  fp-lab-1.opam
.github/workflows/: ci.yml
lib/: dune  task1.ml  task2.ml
test/: dune  test_fp_lab_1.ml
