(lang dune 3.20)

(name fp-lab-1)

(generate_opam_files true)

(source
 (github nerfthisdev/fp-lab-1))

(authors "Author nerfthisdev <barm2001@gmail.com>")

(maintainers "Maintainer nerfthisdev <barm2001@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fp-lab-1)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
